# maiaga-android

./: .gitignore  README.md  local.properties
app/: build.gradle
app/data/: after_throw.xcf  atRest.csv  pravidla.txt  throw2.xcf
app/src/androidTest/java/com/example/lukaskorous/maiaga/: ExampleInstrumentedTest.java
app/src/cpp/: CMakeLists.txt  TinyGPS++.cpp  TinyGPS++.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/lukas/myapplication/: DeviceListActivity.java  DisplayMessageActivity.java  MainActivity.java
app/src/main/java/com/example/lukaskorous/maiaga/: Connector.java  DeviceListActivity.java  MainActivity.java  (+3 more)
app/src/main/java/com/maiaga/: App.java  ConnectionState.java  Connector.java  ConnectorConnectionState.java  DeviceListActivity.java  DisplayResultActivity.java  LogItem.java  MainActivity.java  MockConnector.java  MockDeviceListActivity.java  Processor.java  ProcessorConnectionState.java  Result.java  ShowThrowLibraryActivity.java  ThrowLibrary.java  ThrowRecord.java  ThrowResult.java  ThrowState.java  TopExceptionHandler.java
app/src/main/res/layout/: activity_device_list.xml  activity_display_message.xml  activity_display_result.xml  activity_main.xml  activity_show_throw_library.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/layout-xlarge/: activity_mock_device_list.xml
app/src/main/res/menu/: top_menu.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-cs/: strings.xml
c++/: TinyGPS++.h
gradle/wrapper/: gradle-wrapper.properties
java/io/: annotations.xml
(+1 files in other folders)
